--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/vision": "^4.3.0",
     "@tailwindcss/typography": "^0.5.16",
     "auth": "^1.2.3",
     "class-variance-authority": "^0.7.1",
@@ -22,8 +24,11 @@
     "lucide-react": "^0.535.0",
     "next": "15.4.1",
     "next-auth": "^5.0.0-beta.29",
+    "next-sanity": "^10.1.0-canary.10",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "sanity": "^4.3.0",
+    "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
   },
