--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "packageManager": "npm@10.5.2",
   "overrides": {
     "react": "$react",
-    "react-dom": "$react-dom"
+    "react-dom": "19.1.0"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
@@ -25,7 +25,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.535.0",
-    "next": "15.4.1",
+    "markdown-it": "^14.1.0",
+    "next": "^15.4.2-canary.32",
     "next-auth": "^5.0.0-beta.29",
     "next-sanity": "^10.1.0-canary.10",
     "react": "19.1.0",
@@ -39,6 +40,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/markdown-it": "^14.1.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
