--- a/package.json
+++ b/package.json
@@ -18,15 +18,17 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-toast": "^1.2.14",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^4.3.0",
     "@tailwindcss/typography": "^0.5.16",
+    "@uiw/react-md-editor": "^4.0.8",
     "auth": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.535.0",
     "markdown-it": "^14.1.0",
-    "next": "^15.4.2-canary.32",
+    "next": "^15.4.2-canary.39",
     "next-auth": "^5.0.0-beta.29",
     "next-sanity": "^10.1.0-canary.10",
     "react": "19.1.0",
@@ -34,6 +36,7 @@
     "sanity": "^4.3.0",
     "sanity-plugin-markdown": "^6.0.0",
     "server-only": "^0.0.1",
+    "slugify": "^1.6.6",
     "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
