--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
   "packageManager": "npm@10.5.2",
   "overrides": {
     "react": "$react",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "next": "$next"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toast": "^1.2.14",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^4.3.0",
+    "@sentry/nextjs": "^10.5.0",
     "@tailwindcss/typography": "^0.5.16",
     "@uiw/react-md-editor": "^4.0.8",
     "auth": "^1.2.3",
